--- a/style.css
+++ b/style.css
@@ -37,7 +37,13 @@ body {
     padding: 5px 1em;
     background: var(--base-clr);
     border: 1px solid var(--line-clr);
+
+
+    position: sticky;
+    top: 0;
+    align-self: start;
 }
+
 
 #sidebar ul {
     list-style: none;
@@ -52,6 +58,38 @@ body {
         font-weight: 600;
     }
 }
+
+#sidebar ul li.active a {
+    color: var(--accent-clr);
+}
+
+
+#sidebar ul li.active a svg {
+    fill: var(--accent-clr);
+}
+
+#sidebar a,
+#sidebar .dropdown-btn,
+#sidebar .logo {
+    border-radius: .5em;
+    padding: .85em;
+    text-decoration: none;
+    color: var(--text-clr);
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}
+
+.dropdown-btn {
+    width: 100%;
+    text-align: left;
+    border: none;
+    background: none;
+    font: inherit;
+    cursor: pointer;
+}
+
+
 
 .main {
     padding: min(30px, 7%);
@@ -68,9 +106,9 @@ body {
     border-radius: 1em;
     margin-bottom: 20px;
     padding: min(3em, 15%);
+}
 
-    h2,
-    p {
-        margin-top: 1em;
-    }
+.container h2,
+p {
+    margin-top: 1em;
 }
