--- a/style.css
+++ b/style.css
@@ -128,10 +128,15 @@ p {
 }
 
 #sidebar .sub-menu{
+    overflow: hidden;
+}
+#sidebar .sub-menu{
     display: grid;
     grid-template-rows: 0fr;
     transition: 300ms ease-in-out;
 }
+
+
 
 #sidebar .sub-menu.show{
     grid-template-rows: 1fr;
