--- a/style.css
+++ b/style.css
@@ -235,10 +235,26 @@ p {
         position: fixed;
         bottom: 60px;
         left: 0;
-        box-sizing:border-box ;
+        box-sizing: border-box;
         height: 60px;
         width: 100%;
         background-color: var(--hover-clr);
         border-top: 1px solid var(--line-clr);
+        display: flex;
+        justify-content: center;
     }
+
+    .show > div{
+        overflow-x: auto;
+    }
+    .show li{
+        display: inline-flex;
+    }
+    .show  a {
+        box-sizing: border-box;
+        padding: 1em;
+        width: auto;
+        justify-content: center;
+    }
+
 }
